# Kiro-Strict-SDD-TDD-Starter

./: .gitignore  .pre-commit-config.yaml  README.md  kiro.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: auto-approve.yml  ci.yaml  security-auto-approve.yml
.kiro/hooks/: README.md  block-code-without-tests.kiro.hook  docs-sync-on-change.kiro.hook  enforce-atomic-tasks.kiro.hook  task-start-atomic-branch.kiro.hook  tdd-green-phase.kiro.hook  tdd-red-phase.kiro.hook  tdd-refactor-close.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
